@@ -445,9 +445,6 @@
 		</thead>
 	</table>
 	<br>
-	<div class="display" id="divSettings">
-		<h3>&nbsp;&nbsp;&nbsp;<span data-i18n="Hardware">Hardware</span>:</h3>
-	</div>
 	<table class="display" id="hardwareparamstable" border="0" cellpadding="0" cellspacing="20">
 		<tr>
 			<td align="right" style="width:110px"><label for="hardwarename"><span data-i18n="Name"></span>:</label></td>
@@ -511,9 +508,6 @@
 			<td><input type="checkbox" id="enabled" checked><label for="enabled"></label></td>
 		</tr>
 	</table>
-	<div class="display" id="divSettings">
-		<h3>&nbsp;&nbsp;&nbsp;<span data-i18n="Settings">Settings</span>:</h3>
-	</div>
 	<div id="div1wire">
 		<br>
 		<table class="display" id="hardwareparams1wire" border="0" cellpadding="0" cellspacing="20">
@@ -1654,12 +1648,11 @@
 		</table>
 	</div>
 	<div>
-		<br>
 		<table id="updelclr" border="0" cellpadding="0" cellspacing="14">
 			<tr>
 				<td align="right" style="width:110px"></td>
-				<td><a class="btn btn-info disabled" id="hardwareupdate" data-i18n="Update">Update</a>
-					<a class="btn btn-danger disabled" id="hardwaredelete" data-i18n="Delete">Delete</a>
+				<td><a class="btn btn-warning" id="hardwareupdate" data-i18n="Update">Update</a>
+					<a class="btn btn-danger" id="hardwaredelete" data-i18n="Delete">Delete</a>
 					<a class="btn btn-info" onclick="AddHardware();" data-i18n="Add">Add</a>
 				</td>
 			</tr>
